Fix button stretching

--- a/style.css
+++ b/style.css
@@ -47,4 +47,6 @@ a {
 .left {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    padding: 15px;
 }
